Fixed extra padding in split headers when viewing with small screen size

--- a/public/assignment/css/styles.css
+++ b/public/assignment/css/styles.css
@@ -37,6 +37,12 @@ input {
     .navbar-default {
         padding: 0 30px 0 20px;
     }
+
+    .dc-split-view-left-header,
+    .dc-split-view-right-header {
+        padding: 0px;
+    }
+
 }
 
 @media (min-width: 1200px) {
